WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121225
[Coordinated Graphics] Fix the build on MacOS 10.9
https://bugs.webkit.org/show_bug.cgi?id=121225
Summary
[Coordinated Graphics] Fix the build on MacOS 10.9
Jocelyn Turcotte
Reported
2013-09-12 06:13:28 PDT
[Coordinated Graphics] Fix the build on MacOS 10.9
Attachments
Patch
(1.35 KB, patch)
2013-09-12 06:16 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2013-09-12 06:16:01 PDT
Created
attachment 211424
[details]
Patch
WebKit Commit Bot
Comment 2
2013-09-12 09:41:26 PDT
Comment on
attachment 211424
[details]
Patch Clearing flags on attachment: 211424 Committed
r155623
: <
http://trac.webkit.org/changeset/155623
>
WebKit Commit Bot
Comment 3
2013-09-12 09:41:28 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug