[Coordinated Graphics] Fix the build on MacOS 10.9 https://bugs.webkit.org/show_bug.cgi?id=121225

Reviewed by Darin Adler.

* platform/graphics/surfaces/mac/GraphicsSurfaceMac.cpp:


Canonical link: https://commits.webkit.org/139180@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155623 268f45cc-cd09-0410-ab3c-d52691b4dbfc