Source/WebCore/platform/graphics/surfaces/mac/GraphicsSurfaceMac.cpp
@@ -22,10 +22,10 @@
 
 #if USE(GRAPHICS_SURFACE) && OS(DARWIN)
 #include "TextureMapperGL.h"
-#include <CFNumber.h>
 #include <CGLContext.h>
 #include <CGLCurrent.h>
 #include <CGLIOSurface.h>
+#include <CoreFoundation/CoreFoundation.h>
 #include <IOSurface/IOSurface.h>
 #include <OpenGL/OpenGL.h>
 #include <OpenGL/gl.h>
